TEST_PROGRAMS/VALID/conditiona2.go
package main 
func main(){

	if 7 {
		switch("7 is even"
	}
	else {
		switch("7 is even")
	}
}