TEST_PROGRAMS/INVALID/14/4050_if_triple_empty.go
package x

func main(){
  if () {
  } else {
  }
}
